# FaceRecognition

./: README.md  computer_vision.py  main.py  model.pth  pyproject.toml
notebooks/: computer_vision.ipynb  notebook.ipynb
