[tool.poetry]
name = "fastapifacerecognitionapp"
version = "0.1.0"
description = ""
authors = ["mmeerrccyy <taras.mercury@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
torch = "^2.2.1"
torchvision = "^0.17.1"
opencv-python = "^4.9.0.80"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
